// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person Page component It renders correctly with response Success 1`] = `
<div>
  <div
    class="css-1mxmwia"
  >
    <h1>
      STAR WARS
    </h1>
    <h2>
      mockName1
    </h2>
  </div>
  <p>
    Birth year: 
    mockBirthYear
  </p>
  <p>
    <i>
      List of producers the person has worked with and how many times.
    </i>
  </p>
  <p>
    mockProducer1
    : 
    2
  </p>
  <p>
    mockProducer2
    : 
    1
  </p>
  <p>
    mockProducer3
    : 
    1
  </p>
  <span
    class="css-ht9l73"
  >
    <a
      href="/"
    >
      Back
    </a>
  </span>
</div>
`;

exports[`Person Page component it is calling fetch 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;

exports[`Person Page component it is fetching with Response error 1`] = `
<div>
  <p>
    [Network] something went wrong!
  </p>
</div>
`;
